# whatever-recall

./: .gitignore  .mcp.json  COMMERCIAL.md  LETTER.md  LICENSE  README.md  pyproject.toml
adapters/: __init__.py  hook.py  server.py
docs/guide/: 01-introduction.md  02-why-it-connects.md  03-quickstart.md  04-commands.md  05-how-it-works.md  06-stamps-and-edges.md  07-six-dimensions.md  08-search-inversion.md  09-agents.md  10-architecture.md  11-self-healing.md  12-governance.md  13-privacy.md  14-evolution.md  15-dashboard.md  README.md
experiments/: bench_blast_radius.py  bench_cases_v2.json  bench_v2.py  judge.py
recall/: __init__.py  anchors.py  bootstrap.py  changelog.md  cli.py  config.py  connect.py  contested.py  dashboard.html  dashboard.py  db.py  editgate.py  engine.py  freshness.py  getting-started.md  graph.py  importance.py  license.py  llm.py  login.py  mcp.py  power.py  power_prompt.py  predicate.py  refine.py  resolve.py  rules.md  rules.py  shortcut.py  tasks.py  tray.py
tests/: conftest.py  test_anchors.py  test_bench_cases.py  test_bootstrap.py  test_bridge.py  test_brief.py  test_bughunt_0613.py  test_bughunt_0613b.py  test_bughunt_0617.py  test_bughunt_fixes.py  test_build_config_0618.py  test_cli_gate.py  test_cli_power.py  test_cli_recall_render.py  test_code_intel_0615.py  test_connect.py  test_contested.py  test_dashboard.py  test_dashboard_modal_qol.py  test_deviation_push.py  test_docs_guide_ssot.py  test_editgate_0617.py  test_engine.py  test_engine_bughunt_0615.py  test_freshness.py  test_freshness_predicate_gap.py  test_graph.py  test_handoff.py  test_hook.py  test_impact_arrow.py  test_importance.py  test_license.py  test_llm.py  test_login_starts_dashboard_0617.py  test_mcp.py  test_neighborhood_0618.py  test_no_blind_codemap_skips.py  test_onboarding.py  test_power.py  test_power_estimate.py  (+20 more)
